--- a/store/templates/shop/index.html
+++ b/store/templates/shop/index.html
@@ -112,180 +112,6 @@
         </section>
         <!--================End Home Banner Area =================-->
         
-        <!--================Feature Product Area =================-->
-        <section class="feature_product_area">
-        	<div class="main_box">
-				<div class="container">
-					<div class="row hot_product_inner">
-						<div class="col-lg-6">
-							<div class="hot_p_item">
-								<img class="img-fluid" src="img/product/hot-product/hot-p-1.jpg" alt="">
-								<div class="product_text">
-									<h4>Hot Deals of <br />this Month</h4>
-									<a href="#">Shop Now</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="hot_p_item">
-								<img class="img-fluid" src="img/product/hot-product/hot-p-2.jpg" alt="">
-								<div class="product_text">
-									<h4>Hot Deals of <br />this Month</h4>
-									<a href="#">Shop Now</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="feature_product_inner">
-						<div class="main_title">
-							<h2>Featured Products</h2>
-							<p>Who are in extremely love with eco friendly system.</p>
-						</div>
-						<div class="feature_p_slider owl-carousel">
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-1.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-                                    {% for items in item %}
-									<a href="{% url 'shop:item_detail' item_id=item.pk %}"><h4>{{ item.name}}</h4></a>
-									<h5>{{ item.price }}</h5>
-                                    {% endfor %}
-								</div>
-							</div>
-							{% comment %} <div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-2.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-3.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-4.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-1.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-2.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-3.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-							<div class="item">
-								<div class="f_p_item">
-									<div class="f_p_img">
-										<img class="img-fluid" src="img/product/feature-product/f-p-4.jpg" alt="">
-										<div class="p_icon">
-											<a href="#"><i class="lnr lnr-heart"></i></a>
-											<a href="#"><i class="lnr lnr-cart"></i></a>
-										</div>
-									</div>
-									<a href="#"><h4>Long Sleeve TShirt</h4></a>
-									<h5>$150.00</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-        	</div>
-        </section>
-        <!--================End Feature Product Area =================-->
-        
-        <!--================Deal Timer Area =================-->
-        <section class="timer_area">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Exclusive Hot Deal Ends Soon!</h2>
-        			<p>Who are in extremely love with eco friendly system.</p>
-        			<a class="main_btn" href="#">Shop Now</a>
-        		</div>
-        		<div class="timer_inner">
-					<div id="timer" class="timer">
-						<div class="timer__section days">
-							<div class="timer__number"></div>
-							<div class="timer__label">days</div>
-						</div>
-						<div class="timer__section hours">
-							<div class="timer__number"></div>
-							<div class="timer__label">hours</div>
-						</div>
-						<div class="timer__section minutes">
-							<div class="timer__number"></div>
-							<div class="timer__label">Minutes</div>
-						</div>
-						<div class="timer__section seconds">
-							<div class="timer__number"></div>
-							<div class="timer__label">seconds</div>
-						</div>
-					</div>
-				</div>
-        	</div>
-        </section>
-        <!--================End Deal Timer Area =================-->
         
         <!--================Latest Product Area =================-->
         <section class="feature_product_area latest_product_area">
@@ -658,4 +484,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="js/mail-script.js"></script>
         <script src="js/theme.js"></script>
     </body>
-</html> {% endcomment %}
+</html>
