--- a/store/static/css/bootstrap.css
+++ b/store/static/css/bootstrap.css
@@ -8077,6 +8077,15 @@ a.bg-dark:focus, a.bg-dark:hover {
   .px-xl-1 {
     padding-right: 0.25rem !important;
   }
+  
+  .thumb img  {
+    border: 2px solid #55c5e9; /* Рамка вокруг фотографии */
+    padding: 15px; /* Расстояние от картинки до рамки */
+    background: #666; /* Цвет фона */
+    margin-right: 10px; /* Отступ справа */
+    margin-bottom: 10px; /* Отступ снизу */
+   }
+
   .pb-xl-1,
   .py-xl-1 {
     padding-bottom: 0.25rem !important;
