--- a/store/templates/shop/group_list.html
+++ b/store/templates/shop/group_list.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 {% load static %} 
 {% load thumbnail %}
-{% block content%}        
+{% block content%}
+
         <!--================Latest Product Area =================-->
         <section class="feature_product_area latest_product_area">
+            
         	<div class="main_box">
 				<div class="container">
 					<div class="feature_product_inner">
-						<div class="main_title">
-							<h2>{{ item }}</h2>
-							<p>{{ item.description }}</p>
-						</div>
+                        <h2>{{ title }}</h2>
 						<div class="latest_product_inner row">
 							<div class="col-lg-3 col-md-4 col-sm-6">
 								<div class="f_p_item">
 									<div class="f_p_img">
 										<div class="f_social">
-												{% thumbnail item.photo "700x500" crop="center" upscale=True as im %}
+                                            
+											{% for item in items %}
+                                              
+												{% thumbnail item.photo "280x263" crop="center" upscale=True as im %}
 													<img class="card-img my-2" src="{{ im.url }}">
 												{% endthumbnail %}
 												<ul>
@@ -25,13 +27,10 @@
 													</li>
 													<li style="display: inline-block; font-family: sans-serif;">
 														<h4>${{ item.price }} <h4> 
-																{{ form.values }}
-															
-																
 													</li>
 												</ul>
 												
-											
+											{% endfor %}
 											</div>
 										<div class="p_icon">
 											<a href="#"><i class="lnr lnr-heart"></i></a>
